Fixed layout issue
Fixed a layout issue in chrome

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
+	overflow: hidden;
 }
 
 main {
